# template-positron

./: .gitignore  CMakeLists.txt  README.md  angular.json  astro.config.mjs  binding.gyp  esbuild.config.mjs  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.spec.json
Libraries/protobuf/: config.gypi
Scripts/: BootstrapBuilder.py  CompileProtoBufs.py  GenerateAddon.py  GenerateTestDb.py  Package.py
Source/: common.gypi
Source/Angular/: preload.js
Source/Angular/app/: app-routing.module.ts  app.component.css  app.component.html  app.module.ts
Source/Angular/app/services/: electron-backend.service.spec.ts  electron-backend.service.ts
Source/Astro/: tsconfig.json
Source/Astro/src/components/: Header.astro
Source/Astro/src/layouts/: Layout.astro
Source/Astro/src/pages/: about.astro  demo.astro  index.astro
Source/Astro/src/scripts/: sample_shader.ts
Source/Builder/: go.mod  go.sum
Source/Builder/buffers/: addressbook.proto  config.proto
Source/Builder/cmd/build-system/: main.go
Source/Builder/internal/config/: addressbook.pb.go  common.go  validate.go
Source/Builder/internal/logger/: logger.go
Source/Builder/internal/make/: build.go  compile.go  deploy.go  generate.go
Source/Builder/scripts/: build.ps1  clean.sh  compound.ps1
Source/Builder/tests/: built_test.go
Source/Electron/: addon.ts  config.ts  file.ts  main.ts  python.ts  setup.ts  sql.ts
Source/ElectronRuntime/: main.ts  tsconfig.json
Source/NativeCpp/: config.gypi
Source/NativeCpp/src/: api.cpp  api.h  hello.cpp  simpleAddition.cpp
Source/Positron/: config.gypi
Source/Positron/buffers/: CVar.proto
Source/Positron/src/: API.h  Context.cpp  Context.h  Initialize.cpp
Source/Positronium/: addon.ts  cvar.ts  entry.ts  handles.ts  main.ts  python.ts  read.ts  setup copy.ts  setup.ts  sql copy.ts  tsconfig.json
Source/Positronium/Angular/: entry.ts
Source/Positronium/Astro/: entry.ts  handles.ts
Source/Positronium/EntryPoints/: astro.ts  editor.ts
Source/Positronium/Handles/: astronomy.ts
Source/Positronium/Menus/: editor.ts
Source/Positronium/Preloads/: editor.js
Source/Python/: main.py
native/: CMakeLists.txt
native/src/: Entry.cpp  Entry.h
src/: main.ts
(+38 files in other folders)
